--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -72,6 +72,7 @@ main
 	font-size: 30px
 	font-weight: bold
 	margin: 0
+	line-height: 2
 
 .h2-subtitle
 	font-size: 22px
@@ -118,9 +119,11 @@ main
 	text-align: center
 	&-title
 		font-size: 18px
+		font-weight: bold
 	&-subtitle
 		font-size: 14px
 		font-weight: normal
+		line-height: 1.5
 	&-text
 		height: 100px
 	&-img-wraper
