Доработал тени карточек сервисов

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -69,13 +69,13 @@ main
 // Service > main
 
 .h1-title
-	font-size: 30px
+	font-size: 32px
 	font-weight: bold
 	margin: 0
 	line-height: 2
 
 .h2-subtitle
-	font-size: 22px
+	font-size: 20px
 	font-weight: normal
 	margin: 0
 
@@ -138,7 +138,7 @@ main
 	&__img
 		width: 90px	
 	&:hover
-		box-shadow: 0 0 40px rgba(0, 0, 0, 0.4)
+		box-shadow: $shadow
 		cursor: pointer
 	transition: box-shadow .3s ease-in-out
 
