--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -7,6 +7,7 @@ $grey: #F2F4F7
 $grey-a: #3C444C
 $grey-b: #747D88
 $grey-c: #CBCFD4
+$shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
 
 $text: #333
 
