--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -7,7 +7,8 @@ $grey: #F2F4F7
 $grey-a: #3C444C
 $grey-b: #747D88
 $grey-c: #CBCFD4
-$shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+$shadow-hover: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+$shadow-static: rgba(75, 86, 99, 0.094) 0px 8px 16px
 
 $text: #333
 
