--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -92,6 +92,8 @@ main
 	display: flex
 	align-items: center
 	flex-direction: column
+.container-header
+	box-shadow: $shadow-static
 
 .card
 	&-content
@@ -138,7 +140,7 @@ main
 	&__img
 		width: 90px	
 	&:hover
-		box-shadow: $shadow
+		box-shadow: $shadow-hover
 		cursor: pointer
 	transition: box-shadow .3s ease-in-out
 
