--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -9,6 +9,7 @@ $grey-b: #747D88
 $grey-c: #CBCFD4
 $shadow-hover: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
 $shadow-static: rgba(75, 86, 99, 0.094) 0px 8px 16px
+$shadow-article: 0 30px 60px 0 rgba(0,0,0,.45)
 
 $text: #333
 
