Поправил "базу знаний"

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -6,6 +6,8 @@
 @import "crosswalk"
 @import "service"
 @import "standart"
+@import "knowledge.sass"
+@import "article.sass"
 
 ::placeholder
 	color: #666
@@ -31,6 +33,7 @@ body
 			border-color: green
 
 a
+	color: $dark
 	&:hover
 		text-decoration: none
 
