--- a/app/sass/standart.sass
+++ b/app/sass/standart.sass
@@ -62,3 +62,18 @@
 		box-shadow: $shadow-hover
 		cursor: pointer
 	transition: box-shadow .3s ease-in-out
+
+// карточка статей, проектов 
+.blank 
+   width: 250px
+   height: 177px
+   background: #F2F4F7
+   border-radius: 4px
+
+// карточка раздела
+.division
+   height: 50px
+   width: 50px
+   background: #F2F4F7
+   border-radius: 4px
+
