--- a/app/sass/header.sass
+++ b/app/sass/header.sass
@@ -74,6 +74,7 @@
 		display: flex
 		justify-content: flex-start
 		align-items: center
+		padding-left: 0
 	&-logo
 		display: -webkit-flex
 		display: -moz-flex
