--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -8,6 +8,7 @@
 @import "standart"
 @import "knowledge.sass"
 @import "article.sass"
+@import "footer.sass"
 
 ::placeholder
 	color: #666
@@ -22,6 +23,7 @@ body
 	position: relative
 	line-height: 1.65
 	font-family: "Montserrat", sans-serif
+	font-weight: 500
 	overflow-x: hidden
 	color: $dark
 	input, textarea
@@ -36,6 +38,9 @@ a
 	color: $dark
 	&:hover
 		text-decoration: none
+
+main
+	margin-bottom: 5%
 
 p
 	margin: 0
@@ -54,9 +59,6 @@ ul
 	text-decoration: none
 	list-style: none
 	padding: 0
-
-main
-	height: 100vmin
 
 .row
 	display: -webkit-flex
