Изменил дизайн других разделов на странице базы знаний

--- a/app/sass/standart.sass
+++ b/app/sass/standart.sass
@@ -80,6 +80,26 @@
    width: 50px
    background: #F2F4F7
    border-radius: 4px
+   margin-right: 5%
+   &-wrap
+   	display: -webkit-flex
+   	display: -moz-flex
+   	display: -ms-flex
+   	display: -o-flex
+   	display: flex
+   	align-items: center
+   	height: 75px
+   	&:hover
+   		cursor: pointer
+   		.division-title
+   			color: $primary
+   &-title
+   	font-size: 16px
+   	font-weight: 700
+   &-subtitle
+   	font-weight: 500
+   	font-size: 14px
+   	color: $grey-b
 
 // Статьи
 .article
