--- a/app/sass/article.sass
+++ b/app/sass/article.sass
@@ -1,3 +1,9 @@
 @import "vars.sass"
 
+.blank
+	&_article
+		background-image: url(../img/articles/title.jpg)
+	&_fence-mistake
+		background-image: url(../img/articles/fence-mistake/0.jpg)
+
 
