--- a/app/sass/standart.sass
+++ b/app/sass/standart.sass
@@ -71,7 +71,6 @@
    height: 177px
    background: #F2F4F7
    border-radius: 4px
-   background-image: url(../img/articles/title.jpg)
    background-size: cover
 
 // карточка раздела
@@ -110,7 +109,7 @@
 		font-size: 19px
 	&-title
 		font-weight: 800
-		font-size: 22px
+		font-size: 24px
 		margin-top: 6%
 	&-img
 		width: 100%
@@ -120,6 +119,7 @@
 .img-p
 	color: $grey-b
 	font-size: 16px
+	line-height: 24px
 		
 
 
