Мелкие редачи, допил страницы всех разделов

--- a/app/sass/article.sass
+++ b/app/sass/article.sass
@@ -3,5 +3,7 @@
 .blank
 	&_fence-mistake
 		background-image: url(../img/articles/fence-mistake/0.jpg)
+	&_marshrutki-bad
+		background-image: url(../img/articles/marshrutki-bad/0.jpg)
 
 
