--- a/app/sass/knowledge.sass
+++ b/app/sass/knowledge.sass
@@ -9,7 +9,12 @@ h1, h2, h3, h4, h5
 
 .sub-title 
    line-height: 130%
+   padding-top: 4%
    font-size: 18px
+   &_counter
+      padding-top: 2%
+      font-weight: 400
+      font-size: 14px
 
 strong 
    font-weight: 800
