--- a/app/sass/standart.sass
+++ b/app/sass/standart.sass
@@ -6,6 +6,7 @@
 	font-weight: 800
 	margin: 0
 	line-height: 2
+	padding-top: 5%
 
 .h2-subtitle
 	font-size: 20px
@@ -72,6 +73,15 @@
    background: #F2F4F7
    border-radius: 4px
    background-size: cover
+   &-block
+   	margin-bottom: 4%
+
+// Главная статья раздела
+.main-blank
+	width: 100%
+	height: 42vh
+	&_sub-title
+		font-size: 24px
 
 // карточка раздела
 .division
