--- a/app/sass/header.sass
+++ b/app/sass/header.sass
@@ -34,34 +34,29 @@
 			color: white
 			font-weight: bold
 			font-size: 14px
-			&:hover
-				text-decoration: none
+			display: -webkit-flex
+			display: -moz-flex
+			display: -ms-flex
+			display: -o-flex
+			display: flex
+			justify-content: flex-start
+			flex-direction: column
+			align-items: center
+			&::after
+					content: ""
+					display: block
+					height: 2px
+					width: 0%
+					background-color: white
+					transition: .2s
+			&:hover::after
+				width: 100%
 		a
 			margin-right: 7%
 			display: inline-block
 			position: relative
 			text-decoration: none
-			&:hover
-				text-decoration: none
-				&::after
-					content: ""
-					display: block
-					position: absolute
-					height: 2px
-					width: 100%
-					background-color: white
-					transition: width .5s ease-in-out
-				&::before
-					display: block
-					position: absolute
-					content: ""
-					width: 100%
-					left: 0
-					background-color: red
-					left: 50%
-					bottom: 0
-					transition: width .5s ease-in-out, left .5s ease-in-out
-
+					
 	&-menu
 		display: -webkit-flex
 		display: -moz-flex
