--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -7,7 +7,7 @@ $grey: #F2F4F7
 $grey-a: #3C444C
 $grey-b: #747D88
 $grey-c: #CBCFD4
-$shadow-hover: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+$shadow-hover: 0px 5px 5px -5px rgba(151,163,184,.5),0px 15px 16px -15px rgba(151,163,184,.5),0px 25px 35px -25px rgba(151,163,184,.5)
 $shadow-static: rgba(75, 86, 99, 0.094) 0px 8px 16px
 $shadow-article: 0 30px 60px 0 rgba(0,0,0,.45)
 
